force-app/main/default/objects/Impacted_Products_Serials_Lots__c/Impacted_Products_Serials_Lots__c.object-meta.xml
<CustomObject>
    <description>Object that holds Impacted Product details that will be displayed in Work order and case.</description>
    <label>Impacted Products/Serials/Lots</label>
    <nameField>
        <displayFormat>IMP-{000}</displayFormat>
        <label>Impacted Products/Serials/Lots Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impacted Products/Serials/Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>