force-app/main/default/objects/Impacted_Products_Serials_Lots__c/fields/Field_Action_Notification__c.field-meta.xml
<CustomField>
    <fullName>Field_Action_Notification__c</fullName>
    <businessOwnerUser>sschulte@illumina.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to hold Related Field Action &amp; Notification Record. It is populated Manually.</description>
    <label>Field Action &amp; Notification</label>
    <referenceTo>Field_Action_Notification__c</referenceTo>
    <relationshipLabel>Impacted Products/Serials/Lots</relationshipLabel>
    <relationshipName>Impacted_Products_Serials_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>