force-app/main/default/objects/Impacted_Products_Serials_Lots__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <businessOwnerUser>sschulte@illumina.com</businessOwnerUser>
    <description>Field to hold Lot Number of the Impacted product. It is populated Manually</description>
    <label>Lot Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>