force-app/main/default/objects/Impacted_Products_Serials_Lots__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <businessOwnerUser>sschulte@illumina.com</businessOwnerUser>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to hold the related Product. Populated Manually.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Impacted Products/Serials/Lots</relationshipLabel>
    <relationshipName>Impacted_Products_Serials_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>